--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "dependencies": {
     "apollo": "^2.33.4",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react-alert": "^7.0.3",
+    "react-router-dom": "^5.2.0"
   }
 }
